--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -2,6 +2,14 @@
 @import "../../node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
+$accordion-color: white;
+$accordion-bg: #212529;
+$accordion-icon-color: white;
+$accordion-button-active-bg: #373737;
+$accordion-button-active-color: white;
+
+$list-group-color: white;
+$list-group-bg: #212529;
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../../node_modules/bootstrap/scss/variables";
@@ -45,7 +53,7 @@ $utilities: map-merge(
 // @import "../../node_modules/bootstrap/scss/badge";
 @import "../../node_modules/bootstrap/scss/alert";
 // @import "../../node_modules/bootstrap/scss/progress";
-// @import "../../node_modules/bootstrap/scss/list-group";
+@import "../../node_modules/bootstrap/scss/list-group";
 @import "../../node_modules/bootstrap/scss/close";
 // @import "../../node_modules/bootstrap/scss/toasts";
 @import "../../node_modules/bootstrap/scss/modal";
