Modify the UI layout. Edited the view.ts, index.html, controller.ts and view.ts Added Footer in index.html. Added function in view.ts

--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -5,7 +5,8 @@
 $accordion-color: white;
 $accordion-bg: #212529;
 $accordion-icon-color: white;
-$accordion-button-active-bg: #373737;
+// $accordion-button-active-bg: #446fa0;
+$accordion-button-active-bg: #2c6ab1;
 $accordion-button-active-color: white;
 
 $list-group-color: white;
