--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -14,6 +14,9 @@ $accordion-icon-active-color: white;
 $list-group-color: white;
 $list-group-bg: #212529;
 
+$tooltip-color: black;
+$tooltip-bg: white;
+
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "../../node_modules/bootstrap/scss/variables";
